[Security] Add context and security fixes

--- a/helm/charts/auth-service/templates/deployment.yaml
+++ b/helm/charts/auth-service/templates/deployment.yaml
@@ -23,6 +23,7 @@ spec:
     spec:
       securityContext:
         runAsNonRoot: true
+        runAsUser: 999
       imagePullSecrets:
       - name: {{ .Values.docker.imagePullSecret }}
       containers:
